logs/plantextract.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyXB-1.2.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plantextract'...
Compiling './lib/python3.5/site-packages/plantextract/old_pedparser.py'...
***   File "./lib/python3.5/site-packages/plantextract/old_pedparser.py", line 254
    print self.properties
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plantextract/old_smdx.py'...
***   File "./lib/python3.5/site-packages/plantextract/old_smdx.py", line 58
    print element, model_id, smdx_filename
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plantextract/ped.py'...
***   File "./lib/python3.5/site-packages/plantextract/ped.py", line 241
    print ">> Setting loglevel to: " + loglevel
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plantextract/plant_extract_pyxb.py'...
***   File "./lib/python3.5/site-packages/plantextract/plant_extract_pyxb.py", line 1303
    cc_0 = fac.CounterCondition(min=0L, max=None, metadata=pyxb.utils.utility.Location(u'xsd/sunspec_data.xsd', 7, 8))
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plantextract/smdx_pyxb.py'...
***   File "./lib/python3.5/site-packages/plantextract/smdx_pyxb.py", line 599
    cc_0 = fac.CounterCondition(min=0L, max=None, metadata=pyxb.utils.utility.Location('/Users/brett/dev/gdwd/ped/plantextract/smdx.xsd', 19, 8))
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plantextract-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pyxb'...
Listing './lib/python3.5/site-packages/pyxb/binding'...
Listing './lib/python3.5/site-packages/pyxb/bundles'...
Listing './lib/python3.5/site-packages/pyxb/bundles/common'...
Listing './lib/python3.5/site-packages/pyxb/bundles/common/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/dc'...
Listing './lib/python3.5/site-packages/pyxb/bundles/dc/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/saml20'...
Listing './lib/python3.5/site-packages/pyxb/bundles/saml20/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/wssplat'...
Listing './lib/python3.5/site-packages/pyxb/bundles/wssplat/raw'...
Listing './lib/python3.5/site-packages/pyxb/namespace'...
Listing './lib/python3.5/site-packages/pyxb/utils'...
Listing './lib/python3.5/site-packages/pyxb/xmlschema'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
